src/test/test-models/bad/functions-bad16.stan
functions {
  real square(real x) {
    return x * x;
  }
}
parameters {
  real y;
}
model {
  y ~ normal(0.1,1);
}
